--- a/assignment4-1.qmd
+++ b/assignment4-1.qmd
@@ -87,13 +87,22 @@ prop.table(table(drugs_test$CannabisUse)) * 100
 **c) Specify the evaluation method for the `train()` function of `caret` with 10-fold cross-validation.**
 
 ```{r}
-
+ctrl <- trainControl(
+  method = "cv", # 10-fold cross-validation
+  number = 10, # Number of folds
+  classProbs = TRUE, # Calculating class probabilities
+  summaryFunction = multiClassSummary,  # For multi-class problems
+  verboseIter = TRUE,  # Showing progress
+  savePredictions = "final" # Saving predictions for ROC curves later
+)
 ```
 
 **d) Specify a grid object for tuning a random forest model.**
 
 ```{r}
-
+rf_grid <- expand.grid(
+  mtry = c(2, 4, 6, 8) # Number of variables randomly sampled at each split
+)
 ```
 
 **e) Use `train()` from `caret` in order to grow the forest. Do not use any of the other drugs as predictors in this model. Determine the best model based on the tuning results.**
