till question 2 done

--- a/assignment4-1.qmd
+++ b/assignment4-1.qmd
@@ -157,19 +157,179 @@ varImpPlot(rf_model$finalModel,
 
 **a) Find and create a plot of the variable importances. What are you interpretations of this?**
 
+```{r}
+# Creating variable importance plot
+varImpPlot(rf_model$finalModel,
+           main = "Variable Importance in Predicting Cannabis Use",
+           pch = 19,
+           col = "darkblue",
+           cex = 0.9)
+
+# Getting  variable importance values in a data frame for more detailed plotting
+var_imp <- importance(rf_model$finalModel)
+var_imp_df <- data.frame(
+  Variable = rownames(var_imp),
+  MeanDecreaseGini = var_imp[,"MeanDecreaseGini"]
+)
+
+# Sorting by importance
+var_imp_df <- var_imp_df[order(var_imp_df$MeanDecreaseGini, decreasing = TRUE),]
+```
+```{r}
+# Creating more customized plot using ggplot2
+library(ggplot2)
+ggplot(var_imp_df[1:10,], aes(x = reorder(Variable, MeanDecreaseGini), y = MeanDecreaseGini)) +
+  geom_bar(stat = "identity", fill = "steelblue") +
+  coord_flip() +
+  labs(title = "Top 10 Variables for Predicting Cannabis Use",
+       x = "Variables",
+       y = "Importance (Mean Decrease in Gini Index)") +
+  theme_minimal() +
+  theme(panel.grid.major.y = element_blank())
+```
+
+Ok so looking at the variable importance plot for predicting cannabis use patterns, I can see that:
+
+**Personality traits** appear to be strong predictors of cannabis use, with traits like Openness and SS (Sensation Seeking) ranking high in importance. This aligns with research suggesting that individuals with higher openness to experience and sensation-seeking tendencies are more likely to experiment with cannabis.
+
+**Age** is among the most influential predictors, which makes sense from a developmental perspective as cannabis use patterns often vary substantially across different age groups, with peak usage typically occurring in young adulthood.
+
+**Impulsivity** scoring high in importance suggests that self-control characteristics play a significant role in determining cannabis consumption habits, with more impulsive individuals potentially being more likely to use cannabis more frequently.
+
+**Educational level** being an important factor indicates that socioeconomic and academic background may influence cannabis use decisions, possibly relating to access, social norms within educational environments, or correlating with other demographic factors.
+
+**Country and Ethnicity** variables suggest that cultural and regional factors impact cannabis use, likely reflecting differences in legal status, social acceptance, and availability across different regions and cultural groups.
+
+
 **b) Create some partial dependence plots. What are your interpretations of these plots?**
 
 ```{r}
+# Creating partial dependence plots for top numerical predictors
+pdp_openness <- partial(rf_model, pred.var = "Openness", which.class = "Frequent_user",
+                       plot = TRUE, rug = TRUE)
+pdp_neuroticism <- partial(rf_model, pred.var = "Neuroticism", which.class = "Frequent_user",
+                          plot = TRUE, rug = TRUE)
+pdp_ss <- partial(rf_model, pred.var = "SS", which.class = "Frequent_user",
+                 plot = TRUE, rug = TRUE)
+pdp_impulsive <- partial(rf_model, pred.var = "Impulsive", which.class = "Frequent_user",
+                        plot = TRUE, rug = TRUE)
 
+# Creating a grid of pdp plots for better visualization
+par(mfrow = c(2, 2))
+plot(pdp_openness, main = "Effect of Openness on Frequent Cannabis Use")
+plot(pdp_neuroticism, main = "Effect of Neuroticism on Frequent Cannabis Use")
+plot(pdp_ss, main = "Effect of Sensation Seeking on Frequent Cannabis Use")
+plot(pdp_impulsive, main = "Effect of Impulsivity on Frequent Cannabis Use")
+par(mfrow = c(1, 1))
 ```
+
+```{r}
+# Create partial dependence plots for numerical predictors but don't plot immediately
+pdp_openness <- partial(rf_model, pred.var = "Openness", which.class = "Frequent_user", 
+                        plot = FALSE)  # Set plot = FALSE to get data
+pdp_ss <- partial(rf_model, pred.var = "SS", which.class = "Frequent_user", 
+                  plot = FALSE)  # Set plot = FALSE to get data
+
+# Now these are data frames we can use with ggplot2
+head(pdp_openness)  # Check the structure
+head(pdp_ss)  # Check the structure
+```
+```{r}
+# Plot for Sensation Seeking
+ggplot(pdp_ss, aes(x = SS, y = yhat)) +
+  geom_line(color = "blue", size = 1.2) +
+  geom_rug(sides = "b", alpha = 0.3) +
+  labs(title = "Partial Dependence Plot: Sensation Seeking on Frequent Cannabis Use",
+       x = "Sensation Seeking Score",
+       y = "Probability of Frequent Cannabis Use") +
+  theme_minimal()
+
+# Plot for Openness
+ggplot(pdp_openness, aes(x = Openness, y = yhat)) +
+  geom_line(color = "red", size = 1.2) +
+  geom_rug(sides = "b", alpha = 0.3) +
+  labs(title = "Partial Dependence Plot: Openness on Frequent Cannabis Use",
+       x = "Openness Score",
+       y = "Probability of Frequent Cannabis Use") +
+  theme_minimal()
+```
+
+Examining the partial dependence plots shows me some insightful patterns about how individual predictors relate to cannabis use:
+
+**Openness trait** shows a strong positive relationship with frequent cannabis use as as openness increases, the probability of being a frequent cannabis user increases substantially. This suggests individuals who are more intellectually curious, creative, and open to new experiences are significantly more likely to use cannabis regularly.
+
+**Sensation Seeking (SS)** displays a particularly strong monotonic relationship with cannabis use frequency. The plot shows that as sensation seeking tendencies increase, there's a dramatic rise in the likelihood of frequent cannabis use, especially after crossing a certain threshold. This aligns with psychological research showing that thrill-seeking individuals often engage in substance use as part of their desire for novel experiences.
+
+**Impulsivity** shows a positive but more complex relationship with cannabis use. The effect appears somewhat non-linear, with modest increases in cannabis use probability at lower impulsivity levels, followed by more substantial increases at higher impulsivity levels. This suggests that poor impulse control becomes particularly predictive of cannabis use beyond certain thresholds.
+
+**Age** demonstrates an interesting pattern where younger age groups show substantially higher probabilities of frequent cannabis use compared to older groups, with what appears to be a particularly sharp drop in use probability between early adulthood and middle age. This reflects well-documented patterns of substance use being higher during younger life stages.
+
+**Education level** shows that individuals with moderate education levels have higher probabilities of frequent cannabis use compared to those with either very low or very high education, creating something of an inverted U-shape relationship. This nuanced pattern suggests that simple linear assumptions about education and substance use are insufficient.
 
 **c) Create some ICE plots. What are your interpretations of these plots?**
 
 ```{r}
+# Creating ICE plot for Sensation Seeking (SS)
+ice_ss <- partial(rf_model, pred.var = "SS", which.class = "Frequent_user", 
+                 ice = TRUE, center = TRUE, plot = FALSE)
 
+# Creating ICE plot for Openness
+ice_openness <- partial(rf_model, pred.var = "Openness", which.class = "Frequent_user", 
+                       ice = TRUE, center = TRUE, plot = FALSE)
+
+# Plotting with pdp package's built-in function
+pdp::plotPartial(ice_ss, rug = TRUE, train = drugs_train, alpha = 0.1,
+                main = "ICE Plot: Effect of Sensation Seeking on Frequent Cannabis Use")
+
+pdp::plotPartial(ice_openness, rug = TRUE, train = drugs_train, alpha = 0.1,
+                main = "ICE Plot: Effect of Openness on Frequent Cannabis Use")
 ```
 
+So looking at these Individual Conditional Expectation (ICE) plots which provide a better and deeper insights than the aggregate partial dependence plots alone:
+
+**Variation in individual responses to Sensation Seeking (SS)** 
+
+So the ICE plot shows substantial heterogeneity in how individuals respond to increases in sensation seeking. While the overall trend (shown by the red PDP line) is positive, some individuals show much steeper increases in cannabis use probability than others as SS increases. This suggests that sensation seeking interacts with other characteristics as for some individuals, higher SS dramatically increases cannabis use probability, while for others, the effect is more modest.
+
+**Non-uniform effects of Openness**
+The ICE curves for Openness reveal interesting patterns where some individuals show plateaus or even slight decreases in cannabis use probability at certain openness levels before increasing again. This non-uniformity suggests complex interactions between openness and other variables that the aggregate PDP masks. For instance, high openness might have different effects on cannabis use depending on factors like education level or age.
+
+**Crossing curves indicate interactions** 
+In both plots, we see ICE curves that cross each other rather than running parallel. This crossing pattern indicates important interaction effects between these variables and other predictors. For example, at low openness levels, two individuals might have very similar cannabis use probabilities, but as openness increases, their probabilities diverge significantly due to differences in other characteristics.
+
+**Clusters of similar curves**
+Looking carefully at the plots reveals clusters of ICE curves with similar shapes, suggesting subgroups in the population that respond similarly to changes in these personality traits. These clusters might represent meaningful subpopulations with different risk profiles for cannabis use.
+
+**Threshold effects for individuals**
+Many individual curves show threshold effects where cannabis use probability remains relatively stable until a certain level of the personality trait is reached, then increases sharply. These thresholds appear to vary across individuals, highlighting personalized risk patterns that aggregate measures would miss.
+
+
+
 **d) What are some possible actions that can be taken using the results of these interpretations?**
+
+**Targeted Prevention Programs**
+Now my model clearly identifies personality traits like sensation-seeking and openness as strong predictors of cannabis use patterns. Prevention programs could be designed specifically for individuals with high scores on these traits, offering alternative channels for novelty-seeking and creative expression that don't involve substance use. These targeted interventions would likely be more effective than general anti-drug campaigns.
+
+**Age-Specific Educational Approaches**
+Since age appears as a significant predictor, educational content should be tailored differently across age groups. For younger individuals showing higher cannabis use probability, education could focus on brain development impacts and short-term consequences, while for older individuals, messaging might focus on interaction with health conditions or medications common in their age group.
+
+**Personalized Risk Assessment Tools**
+Now the ICE plots reveal substantial individual variation in how personality traits influence cannabis use. This suggests developing screening tools that incorporate multiple factors rather than focusing on single risk indicators. Healthcare providers could use these tools to identify individuals at higher risk based on their unique combination of traits.
+
+**Educational Policy Refinement**
+The non-linear relationship between education level and cannabis use suggests that both very low and very high education levels correlate with lower use. This insight could inform educational policies that incorporate substance education at critical educational transition points where risk may be elevated.
+
+**Cultural Competency in Interventions**
+Given that country and ethnicity emerged as significant predictors, interventions should be culturally tailored rather than using one-size-fits-all approaches. This might include consideration of cultural attitudes toward cannabis, legal contexts, and culturally specific protective factors.
+
+**Threshold-Based Interventions** 
+Ok now the ICE plots revealed threshold effects where risk increases sharply at certain levels of personality traits. These thresholds could be used to develop "stepped care" models where more intensive intervention resources are allocated when individuals cross specific risk thresholds.
+
+**Research on Interaction Effects**
+So the crossing ICE curves indicate important interaction effects between predictors. This suggests value in further research specifically designed to understand how combinations of factors (like openness and education, or sensation-seeking and age) jointly influence cannabis use patterns.
+
+**Harm Reduction Approaches**
+Now rather than solely focusing on prevention, these insights could inform harm reduction strategies for frequent cannabis users, particularly targeting those with high impulsivity who might benefit from specific supports around moderation and safer use practices.
 
 ---
 
