--- a/Project Proposal.qmd
+++ b/Project Proposal.qmd
@@ -5,3 +5,8 @@ format: pdf
 editor: visual
 ---
 
+For the SURVMETH 640 course's final project, I plan to explore sports analytics using Premier League soccer data, with a particular focus on player performance prediction. My primary goal is to create a predictive model that forecasts player performance metrics (such as goals scored, assists, or player ratings) based on historical data. 
+
+This analysis will help introduce and explain soccer to non-soccer viewers by clearly illustrating positions on the field, player roles, managerial strategies, and the dynamics of the transfer market through data-driven insights. I will utilize publicly available datasets from recent Premier League seasons, including detailed statistics about players (e.g., minutes played, goals, assists, passes completed), team formations, and managerial tactics. 
+
+So by applying supervised machine learning methods such as regression models [linear regression, ridge/lasso regression], decision trees, random forests, SVM and possibly gradient boosting algorithms, I aim to identify the most accurate model for predicting player performance. Ultimately, this predictive analysis can enhance viewer engagement by providing clear and intuitive explanations of what makes soccer exciting and strategic, thus promoting interest among new audiences.
